; ModuleID = '/home/carl/AnghaBench/openssl/test/testutil/extr_format_output.c_test_fail_memory_message.c'
source_filename = "/home/carl/AnghaBench/openssl/test/testutil/extr_format_output.c_test_fail_memory_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_fail_memory_message(i8* %0, i8* %1, i32 %2, i8* %3, i8* %4, i8* %5, i8* %6, i8* %7, i64 %8, i8* %9, i64 %10) #0 {
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i64, align 8
  %21 = alloca i8*, align 8
  %22 = alloca i64, align 8
  store i8* %0, i8** %12, align 8
  store i8* %1, i8** %13, align 8
  store i32 %2, i32* %14, align 4
  store i8* %3, i8** %15, align 8
  store i8* %4, i8** %16, align 8
  store i8* %5, i8** %17, align 8
  store i8* %6, i8** %18, align 8
  store i8* %7, i8** %19, align 8
  store i64 %8, i64* %20, align 8
  store i8* %9, i8** %21, align 8
  store i64 %10, i64* %22, align 8
  %23 = load i8*, i8** %12, align 8
  %24 = load i8*, i8** %13, align 8
  %25 = load i32, i32* %14, align 4
  %26 = load i8*, i8** %15, align 8
  %27 = load i8*, i8** %16, align 8
  %28 = load i8*, i8** %17, align 8
  %29 = load i8*, i8** %18, align 8
  %30 = load i8*, i8** %19, align 8
  %31 = load i64, i64* %20, align 8
  %32 = load i8*, i8** %21, align 8
  %33 = load i64, i64* %22, align 8
  %34 = call i32 @test_fail_memory_common(i8* %23, i8* %24, i32 %25, i8* %26, i8* %27, i8* %28, i8* %29, i8* %30, i64 %31, i8* %32, i64 %33)
  %35 = call i32 @test_printf_stderr(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @test_fail_memory_common(i8*, i8*, i32, i8*, i8*, i8*, i8*, i8*, i64, i8*, i64) #1

declare dso_local i32 @test_printf_stderr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
